--- a/Module3-solution/index.html
+++ b/Module3-solution/index.html
@@ -65,9 +65,9 @@
 </div>
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
-  <script src="js/jquery-2.2.3.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/script.js"></script>
+  <script src="bootstrap/bootstrap-3.3.6-dist/js/jquery-2.2.3.min.js"></script>
+  <script src="bootstrap/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
+  <script src="bootstrap/bootstrap-3.3.6-dist/js/script.js"></script>
 
 
 </body>
