--- a/Module3-solution/index.html
+++ b/Module3-solution/index.html
@@ -19,26 +19,26 @@
        <div class="navbar-brand pull-left">
          <a  href="index.html"><h1>Food, LLC</h1></a>
         </div>
-        <button type="button" class="navbar-toggle collapsed visible-xs" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>  
+         <button type="button" class="navbar-toggle collapsed visible-xs" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
     </div>
     <div id="collapsable-nav" class="collapse navbar-collapse">
-           <ul id="nav-list" class="nav navbar-nav navbar-right">
+           <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs active">
             <li>
               <a href="#">
-                <br class="visible-xs active"> Chicken</a>
+                <br class="hidden-xs"> Chicken</a>
             </li>
             <li>
               <a href="#">
-                <br class="visible-xs active"> Beaf</a>
+                <br class="hidden-xs"> Beaf</a>
             </li>
             <li>
               <a href="#">
-                <br class="visible-xs active"> Sushi</a>
+                <br class="hidden-xs"> Sushi</a>
             </li>
            
           </ul><!-- #nav-list -->
@@ -68,6 +68,8 @@
   <script src="bootstrap/bootstrap-3.3.6-dist/js/jquery-2.2.3.min.js"></script>
   <script src="bootstrap/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
   <script src="bootstrap/bootstrap-3.3.6-dist/js/script.js"></script>
+  <script src="bootstrap/bootstrap-3.3.6-dist/js/npm.js"></script>
+
 
 
 </body>
